# SigmaDSL

./: .gitignore  README.md  a.json  b.json  decisions.jsonl  pyproject.toml  runlog.json
docs/: 01_dsl.md  02_dsl_proj_plan.md  03_dsl_stakeholder_benefits.md  DEFERRED_TASKS.md  DSL_v0.md  SigmaDSL_Project_Plan_And_Sprint_Tracker.ods  adapter_contracts.md  chain_context_cookbook.md  debugging_determinism.md  decision_profiles.md  dsl_quickstart.md  dsl_v0.3.md  dsl_v0.4.md  dsl_v0.5.md  dsl_v0.6.md  dsl_v1.0.md  dsl_v1.1.md  dsl_v1.2.md  dsl_v2.0.md  equity_product_quickstart.md  faq.md  high_level_dsl_v0.1.md  high_level_dsl_v0.2.md  high_level_dsl_v0.3.md  high_level_dsl_v0.4.md  high_level_dsl_v0.5.md  high_level_dsl_v0.6.md  high_level_dsl_v1.0.md  high_level_dsl_v1.1.md  high_level_dsl_v1.2.md  high_level_dsl_v2.0.md  indicator_cookbook.md  indicator_registry.md  intent_platform.md  language_guardrails.md  option_chain_context.md  option_context_rules.md  options_contract_context.md  plan_ir.md  risk_constraints.md  (+2 more)
tests/: test_chain_metrics_numeric.py  test_cli_diff.py  test_cli_explain.py  test_cli_lint.py  test_cli_profile.py  test_cli_replay.py  test_cli_report.py  test_cli_run.py  test_cli_validate.py  test_cli_validate_directory.py  test_cli_validate_type_errors.py  test_decision_schema_v1_0_a.py  test_evaluator_trace.py  test_examples_indicator_rules_pack.py  test_examples_option_chain_context.py  test_examples_option_chain_worked_examples.py  test_examples_pack.py  test_examples_risk_rules_pack.py  test_imports.py  test_indicators_numeric.py  (+11 more)
(+236 files in other folders)
